--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^16.8.6",
     "react-scripts": "0.9.x"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "json-loader": "^0.5.7"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
