--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Application Titledvddvdvvddd",
+    "title": "Application Title",
     "envName": "LocalDev",
     "URL": "localhost:8090"
 }
